fixed font sizes and spacing, create classes for price and button

--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
   align-items: center;
 }
 
-.image {
+.left-image {
   width: 20em;
   height: 32.12em;
   display: flex;
@@ -41,7 +41,7 @@ body {
   align-items: center; 
 }
   
-.image img {
+.left-image img {
   height: 100%;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
@@ -60,14 +60,41 @@ body {
   margin-right: 2em;
 }
 
-.content .product {
-  font-size: 0.9em;
+.product {
+  font-size: 0.95em;
   font-weight: 500;
 }
 
 .content h1 {
+  line-height: 95%;
   font-size: 2.2em;
   font-family: "Fraunces", serif;
   font-weight: 700;
   color: hsl(212, 21%, 14%)
+}
+
+.description {
+  line-height: 150%;
+}
+
+.price-green {
+  font-family: "Fraunces", serif;
+  color: hsl(158, 36%, 37%);
+  font-weight: 700;
+  font-size: 2.2em;
+}
+
+.price-scratched {
+  text-decoration: line-through;
+}
+
+.btn {
+  font-family: "Monstserrat", sans-serif;
+  background-color: hsl(158, 36%, 37%);
+  color: white;
+  font-weight: 600;
+  border: none;
+  border-radius: 5px;
+  width: 100%;
+  height: 3em;
 }
